# judicialbackend

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/routers/: jobs.py  processos.py
app/connectors/: datajud.py
app/core/: config.py  logging.py
app/db/migrations/: env.py
app/db/migrations/versions/: 20260223_0001_add_unique_processo_numero_tribunal.py  20260223_0002_alter_processos_data_ajuizamento_to_datetime.py
app/db/models/: __init__.py  job.py  processo.py
app/schemas/: __init__.py  jobs.py  processos.py
app/services/: export_service.py  jobs_service.py  processos_service.py
app/workers/: celery_app.py  tasks.py
docs/: backend-judicial-plan.md
tests/: test_export.py
