[tool.poetry]
name = "judicial-backend"
version = "0.1.0"
description = "MVP backend para coleta e consulta de dados judiciais"
authors = ["you <you@example.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
requests = "^2.32.0"
pydantic = "^2.8.0"
pydantic-settings = "^2.4.0"
sqlalchemy = "^2.0.0"
psycopg = {extras = ["binary"], version = "^3.2.0"}
alembic = "^1.13.0"
celery = "^5.4.0"
redis = "^5.0.0"
pandas = "^2.2.0"
openpyxl = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.27.0"

[tool.pytest.ini_options]
pythonpath = ["."]
